palettedir = $(datadir)/gxsm4/palette

palette_DATA = \
	profile_colors.xcolor \
	profile_colors_reverse.xcolor \
	greypal.pnm \
	greyhilight.pnm \
	greyhilightx.pnm \
	greydeepsea.pnm \
	deepsea.pnm \
	bluepal.pnm \
	bluepal2.pnm \
	redyellow.pnm \
	bluegreenpal.pnm \
	deepsea2.pnm \
	fullsatspectrumpal.pnm \
	greenpal.pnm \
	omicronpal.pnm \
	redpal.pnm \
	romanflagpal.pnm \
	parula-step-cm.pnm \
	parula.pnm \
	cm-a.pnm \
	cm-b.pnm \
	cm-c.pnm \
	cm-d.pnm \
	cm-parula2.pnm \
	cm-RdBuGnYl.pnm \
	xxsmpalette.pnm
