install_data(
    sources: [
        'bluegreenpal.pnm',
        'bluepal2.pnm',
        'bluepal.pnm',
        'cm-a.pnm',
        'cm-b.pnm',
        'cm-c.pnm',
        'cm-d.pnm',
        'cm-parula2.pnm',
        'cm-RdBuGnYl.pnm',
        'deepsea2.pnm',
        'deepsea.pnm',
        'fullsatspectrumpal.pnm',
        'greenpal.pnm',
        'greydeepsea.pnm',
        'greyhilight.pnm',
        'greyhilightx.pnm',
        'greypal.pnm',
        'omicronpal.pnm',
        'parula.pnm',
        'parula-step-cm.pnm',
        'redpal.pnm',
        'redyellow.pnm',
        'romanflagpal.pnm',
        'SQDM-pal-flip.pnm',
        'SQDM-pal.pnm',
        'xxsmpalette.pnm',
        'profile_colors_reverse.xcolor',
        'profile_colors.xcolor',
    ],
    install_dir : get_option('datadir') / 'gxsm4/palette'
)
